Add note about editing metrics for quotas (#160)
Extracted the screenshot from chrome dev tools "Capture node
screenshot", then added a 1px border with

```bash
❯ convert -bordercolor black -border 1 static/img/docs/platform/metric-edit{,out}.png
```

--- a/docs/platform/metrics.mdx
+++ b/docs/platform/metrics.mdx
@@ -286,3 +286,9 @@ Quotas tab.
 Apart from being limited by quotas, the ingestion of Metrics may be
 [rate-limited](/docs/platform/rate-limiting#custom-reports). Avoid sending data
 more than once per hour per device.
+
+To adjust which metrics count against the quotas, open project settings and
+click on the Metrics tab. Clicking on an individual metric opens the edit window
+where settings can be adjusted, including how the metric counts against quotas:
+
+![Memfault Metric editing](/img/docs/platform/metric-edit.png)
