--- a/blog/2021-11-30.mdx
+++ b/blog/2021-11-30.mdx
@@ -63,6 +63,8 @@ When managing
 informs about the number of remaining metrics for fleet-wide analytics. The
 dedicated page at Settings→Quotas presents an overview.
 
+<!-- truncate -->
+
 ## General
 
 - Various UI improvements: Creating new elements in the UI follow a similar flow
