--- a/docs/android/introduction.mdx
+++ b/docs/android/introduction.mdx
@@ -62,5 +62,7 @@ upload the required symbols and mappings, respectively. See
 [Uploading Android Bug Reports and Symbols](uploading-android-bugreports.mdx)
 for more information.
 
+The _Bort_ SDK contains
+[built-in support for collecting many Android system metrics](android-builtin-metrics).
 To track additional or custom metrics on your platform, see our guide on
-[Collecting Device Metrics](android-eventlog-metrics.mdx).
+[Collecting Custom Metrics](android-custom-metrics).
