--- a/docs/platform/metrics.mdx
+++ b/docs/platform/metrics.mdx
@@ -23,7 +23,8 @@ SDKs:
 
 - for MCU: [Collecting Device Metrics using our MCU SDK](/docs/mcu/metrics-api)
 - for Android:
-  [Collecting Device Metrics using our Android SDK](/docs/android/android-eventlog-metrics).
+  [Bort SDK Built-In Metrics](/docs/android/android-builtin-metrics),
+  [Bort Custom Metrics APIs](/docs/android/android-custom-metrics).
 
 ### From the Memfault app
 
@@ -208,7 +209,8 @@ supported).
 
 There are three ways to write an Attribute:
 
-1. using the [Metrics API](/docs/mcu/metrics-api)
+1. using the Metrics APIs
+   ([MCU](/docs/mcu/metrics-api)/[Android](/docs/android/android-custom-metrics))
 2. using the REST API
 3. using the web application.
 
