Bort doc tweaks (#173)
Co-authored-by: sjp4 <sjp4@users.noreply.github.com>

--- a/docs/android/android-bort.mdx
+++ b/docs/android/android-bort.mdx
@@ -26,7 +26,9 @@ The Bort SDK supports two parallel and complementary data collection systems:
    performance and privacy.
 
 Below is a summary of the Bort SDK features and the version of the SDK in which
-they were added.
+they were added. See the
+[Bort Changelog](https://github.com/memfault/bort/blob/master/CHANGELOG.md) for
+more details.
 
 | Feature                | Bug Reports | Caliper |
 | ---------------------- | ----------- | ------- |
@@ -35,8 +37,12 @@ they were added.
 | Fleet-Wide Metrics     | 3.0         | 3.0     |
 | Reboot Events          | 3.0         | 3.0     |
 | Logs                   | 1.0         | 3.3     |
-| Installed Packages     | 1.0         | Future  |
-| System Properties      | 1.0         | Future  |
+| Custom Events          |             | 3.5     |
+| Installed Packages     | 1.0         | 4.0     |
+| System Properties      | 1.0         | 4.0     |
+| Storage Metrics        |             | 4.0     |
+| Temperature Metrics    |             | 4.0     |
+| Custom Metrics         |             | 4.0     |
 
 ## Components
 
