MFLT-5479 Fix broken link to android built-in metrics in docs (#175)
Not sure why Docusaurus didn't catch it. Maybe it ignores links missing
a slash.

--- a/docs/android/android-custom-metrics.mdx
+++ b/docs/android/android-custom-metrics.mdx
@@ -12,7 +12,7 @@ Reporting APIs are available from Bort 4.0 onwards.
 
 Memfault has support for various built-in AOSP metrics, like battery health,
 wakelock counts, foregrounded apps and so on. See
-[Built-in Metrics](android-builtin-metrics) for more details.
+[Built-in Metrics](/docs/android/android-builtin-metrics) for more details.
 
 Aside from the built-in metrics, it is also possible to define custom ones. In
 this guide we describe the different kinds of metric that can be collected.
