Fix URLs when current page includes trailing `/` (#181)
@dmyablonski noticed this URL issue; affects any link that isn't either
absolute or relative or includes the `.mdx` trailing file extension.

Install ripgrep with this command to get PCRE2:

```bash
❯ cargo install ripgrep --features 'pcre2'
```

Then use this spicy command to find URLs that likely have the issue
(also uses fd-find):

```bash
❯ rg --engine pcre2 '\]\([^/h#\.](?![^/:]*?\.mdx)[^:/]*?\)' $(fd '\.mdx' | sort)
```

See also
https://github.com/dmyablonski/memfault-docs/commit/01bfe5e2385303be7f056c47e43ddd82144bd64f
.

--- a/docs/android/android-builtin-metrics.mdx
+++ b/docs/android/android-builtin-metrics.mdx
@@ -10,7 +10,8 @@ from Android devices.
 Some are automatically collected, and some require configuration in the Memfault
 dashboard.
 
-To record custom metrics, see the [Reporting APIs](android-custom-metrics).
+To record custom metrics, see the
+[Reporting APIs](/docs/android/android-custom-metrics).
 
 :::info
 
