--- a/docs/android/android-custom-metrics.mdx
+++ b/docs/android/android-custom-metrics.mdx
@@ -38,7 +38,7 @@ the `reporting-lib` library. This library reports metrics to the
 to be started for every value recorded).
 
 To add the library,
-[follow these instructions](custom-events#add-the-reporting-lib-library).
+[follow these instructions](/docs/android/custom-events#add-the-reporting-lib-library).
 
 A C/C++ library will be added in a future release.
 
