--- a/docs/android/android-releases-guide.mdx
+++ b/docs/android/android-releases-guide.mdx
@@ -7,7 +7,8 @@ sidebar_label: OTA Management
 :::info
 
 The Bort SDK includes a full OTA update client, from version 3.7.0 onwards. See
-[Bort OTA client](android-ota-update-client) below for more information.
+[Bort OTA client](/docs/android/android-ota-update-client) below for more
+information.
 
 :::
 
@@ -234,7 +235,8 @@ Release.
 
 :::info
 
-The [OTA Update Client](android-ota-update-client) manages this process!
+The [OTA Update Client](/docs/android/android-ota-update-client) manages this
+process!
 
 :::
 
