--- a/docs/android/introduction.mdx
+++ b/docs/android/introduction.mdx
@@ -63,6 +63,6 @@ upload the required symbols and mappings, respectively. See
 for more information.
 
 The _Bort_ SDK contains
-[built-in support for collecting many Android system metrics](android-builtin-metrics).
+[built-in support for collecting many Android system metrics](/docs/android/android-builtin-metrics).
 To track additional or custom metrics on your platform, see our guide on
-[Collecting Custom Metrics](android-custom-metrics).
+[Collecting Custom Metrics](/docs/android/android-custom-metrics).
