Add a small script for checking page ids (#182)
This script checks if a page `id: ` tag matches the basename (without
extension) of the file, and returns non-zero if there's a mismatch.

This helps reduce confusion IMO, and I didn't see a reason to not
require it.

Add the check to github actions.

Correcting the ones that don't match by following this strategy:

- rename the _file_ (NOT the ID) to match the ID. this preserves
  external links, since the slug is based on the ID. the file name is
  not used in the generated site.
- update any cross links here that use the file name to match the new
  name (docusaurus fails to compile when they're broken 😍)
- run prettier (npx prettier --write $(gd HEAD --name-only))

--- a/docs/mcu/arm-gcc-guide.mdx
+++ b/docs/mcu/arm-gcc-guide.mdx
@@ -243,8 +243,9 @@ need to push the data to the Memfault cloud ...
 ### Publish data to the Memfault cloud
 
 Extensive details about how data from the Memfault SDK makes it to the cloud
-[can be found here](data-from-firmware-to-cloud.mdx). In short, the Memfault SDK
-packetizes data into "chunks" that must be pushed to the Memfault cloud via the
+[can be found here](data-from-firmware-to-the-cloud.mdx). In short, the Memfault
+SDK packetizes data into "chunks" that must be pushed to the Memfault cloud via
+the
 [chunk REST endpoint](https://api-docs.memfault.com/?version=latest#66b0e390-2c3e-4c0d-b6c2-836a287b9e5f)
 
 A typical integration looks like this:
