--- a/docs/platform/projects-and-fleets.mdx
+++ b/docs/platform/projects-and-fleets.mdx
@@ -55,8 +55,8 @@ Within each Memfault Project you can:
 - [Monitor Fleet-wide metrics](./charts.mdx)
 - [Inspect and debug individual Devices](./inspecting-a-device.mdx)
 - Deploy new firmware/software updates to parts of your
-  [Android](../android/android-releases-guide.mdx) or
-  [MCU](../mcu/releases-guide.mdx) Fleet
+  [Android](../android/android-releases-integration-guide.mdx) or
+  [MCU](../mcu/releases-integration-guide.mdx) Fleet
 
 ### Creating a new Project
 
