MFLT-5656 Update documentation on device search (#189)
* MFLT-5656 Update documentation on device search

The only content that mentions device search is the metrics docs. I
updated the screenshots and the text.

I considered updating Device Sets as well, but the text in that is
generic enough that I felt no update was needed.

--- a/docs/platform/metrics.mdx
+++ b/docs/platform/metrics.mdx
@@ -259,17 +259,15 @@ _Editing an Attribute via the web application_
 ## Searching Devices by Attributes and Timeseries
 
 You can search devices by Attributes and Timeseries. Visiting the **Devices**
-page, open the **Filter** panel and under **Reported** select the Metric you
-want to search by.
+page, open the **Filter** panel.
 
-If you select a **During** time frame, devices will be searched by their
-Timeseries Metrics during that time frame. If you do not select a **During**
-time frame, devices will be searched by their Device Attributes.
-
-You can search by multiple Attributes and Timeseries using the _plus icon_.
+To filter by Attributes, add a **Custom Attribute** filter.
 
 ![Device search by Attribute](/img/docs/platform/device-search-by-attribute-min.png)
 _Searching devices by Attribute_
+
+To filter by Timeseries, add a **Historical Data** filter and select
+**Timeseries**.
 
 ![Device search by Timeseries](/img/docs/platform/device-search-by-timeseries-min.png)
 _Searching devices by Timeseries_
