--- a/docs/platform/software-version-hardware-version.mdx
+++ b/docs/platform/software-version-hardware-version.mdx
@@ -248,7 +248,7 @@ A single Software Version is associated with one Symbol Software Artifact
 The software running on your devices will need to report its Software Version
 correctly such that it matches with what has been configured in the Project.
 Please see the
-[core/device info component](https://github.com/memfault/memfault-firmware-sdk/blob/master/components/README.md)
+[core/device info component](https://github.com/memfault/memfault-firmware-sdk/blob/master/components/include/memfault/core/platform/device_info.h)
 of the Firmware SDK for details on how to set this up on the device's software
 side.
 
